@@ -3,6 +3,8 @@ AUX sabnzbd.ini 356 SHA256 42099306da9c582809753e885cd2ac3ed34a07702d2009d959ca6
 AUX sabnzbd.init 1213 SHA256 863e2980a815773c4a9b34a720d1ff7dc3bfbff270dff2d7bb1c637613befccf SHA512 abd79810d48494ddc2588be4337a77a712b7db2b3d2a2d9e34b556fadd12e4b70b99f38904f7ade882c5521f8301b4809530ecb503dc08783626435f18014dcb WHIRLPOOL ff3b7f016abf06ca5dddb448bc8dfb7323ae73625326f5cae0ac326edd6d7cb12e501fc2ae7828c1c49b72da37ce71ffb05efa74959cf4987349ff2284359048
 AUX sabnzbd.logrotate 177 SHA256 0063c24056a2dfaa48192089451adfc6647bbb201f7c64185ee0f710d29af61a SHA512 52408ccb8b812b9da1e62c9a22ca705a0f4d5d7e194c9ea0637f34e52344372071ac6fbb1055d9cfce8b3264629e6fed9d1a59490fe821d3a1ac08835c4ec146 WHIRLPOOL f2856d569bd0c40acc825621b9546a8d0239a3d3a80052dfe45095cc836a3cb52d3dc9e4e099feb272a4acf657c2f92eb86ac0d062804c83ef4dea1500e5cc1f
 DIST SABnzbd-0.7.3-src.tar.gz 2249872 SHA256 a0d2e7c49d0c3231f1882cd0ef83883c3d03e189ddc8ef6120bcd63cc902f337 SHA512 50cf715869bd6b69c65fa88d012d8c106b683c383a377f2a3919ae6bee77e82ba7aeef0a48e3f03d98a3a6dd61b1e6b0bc61c679ce907307fb4dcb194ad61883 WHIRLPOOL 422f12ba7bf180928a43fde10569fb84d239970dd0382d33efc9de22354f55a1787e6b96af9023ee00d282ad380b612be7cd4931ec93977cee49625c4b05d30d
+DIST SABnzbd-0.7.4-src.tar.gz 2260033 SHA256 4d23e6135f1cf3599987e68d404e6a6b7e880ace1ade30e54e01e9fa7ee5bf17 SHA512 b4bca55b6e32ec130ee1a9604e2a613c8546fc2be76689b336aeec0edd7d0861232f2989ba335b800e0aca1abbf2a02d99ff27d5356bd855ab91b0b2415fbd17 WHIRLPOOL ba3c60fd64d7463ffa519364f7af204ec7d63342ed0883ae8ae6ecb892c7c51baccc27c5be3bf4f339584f5e3d0546fe7256c254dd4fc4bb5422422a185c6fd7
 EBUILD sabnzbd-0.7.3.ebuild 2278 SHA256 7efd3b1bbba269ad92bbc71647cb728fb3d2d0962040488f7542bf97ea2305d0 SHA512 e0e679c212a2bc2146af9e31d2ec76a5d01349437072503ab22966f38d05fe94b3130ce486432f4a073a18f48355a961f328297c3773762b08d631ebed88e492 WHIRLPOOL 8d2766400f9132f1959484bd678c75dedab303809692cd0405f8dc91f55e5f7afff52fde8b7ed8e6286c126c4c247970c91832e6db0355fbe4a03d96c90bcf65
-MISC ChangeLog 1871 SHA256 a3c7b3ab219dea9cec60b9e2fd329995577336347cd7a058ea504c2764c63389 SHA512 c2be9b2f50b9f9b3adb30f57942aa33517a75033ae2b8214bfadb3e6eb5a62cb7a2675ccf5763c43174643a103a9dad1b656f1d585bb62d454e04fa816044b98 WHIRLPOOL a3716b3e61115b05b2afda09b7466c15576ebb714e3f473620267996128e548cd3759eaa1f74f528b861e3c758aca1a8075c3f035779d78c159bb6c0edb3b0c4
+EBUILD sabnzbd-0.7.4.ebuild 2278 SHA256 7efd3b1bbba269ad92bbc71647cb728fb3d2d0962040488f7542bf97ea2305d0 SHA512 e0e679c212a2bc2146af9e31d2ec76a5d01349437072503ab22966f38d05fe94b3130ce486432f4a073a18f48355a961f328297c3773762b08d631ebed88e492 WHIRLPOOL 8d2766400f9132f1959484bd678c75dedab303809692cd0405f8dc91f55e5f7afff52fde8b7ed8e6286c126c4c247970c91832e6db0355fbe4a03d96c90bcf65
+MISC ChangeLog 2008 SHA256 92c4be4940124f12dba4ed0bb5dbbaab3fa7f22a25e806664da328b9a9f12279 SHA512 129bb094dc8d2bbce45fa8077385287ae926f783751f39e9ad7713af1255d57f59b29e151a3149213144b6c07a66f769da7dfa98899665ebe6b278f246fedefa WHIRLPOOL c0eb2ca232a7263ea9c12a77d15eb15ec3ebae12e292ff02ea15340e29fb2908b01dfd0ec048fa0b0da02eefcec3742a163e675eb53050225810357aa05444b2
 MISC metadata.xml 327 SHA256 d744eb8cc8addb9efbe8783b9610e858129bef6016dab0580b9d6ad59a7f9c51 SHA512 7da6e314c4b447147ac50969b6bc2223974368674552f72dfd0b6a531d41707d8cd03ce1ea8ec5857233dac967cd82e43163be5c5df8d2d71cdf455ed3eaf619 WHIRLPOOL b6764b7dfb1fdd3852262c23ced454844bdbc6ace6ca76f23598eda1cedc02e95493a898afc3e668dbaabf30be34936c6bdb746503df4a37c032e6e28802a697
