@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sabnzbd-0.7.4 (05 Oct 2012)
+
+  05 Oct 2012; Daniel Rune Jensen (soehest) drunejensen@gmail.com
+  +sabnzbd-0.7.4.ebuild
+  Version bump.
+
 *sabnzbd-0.7.3 (14 Aug 2012)
 
   14 Aug 2012; Daniel Rune Jensen (soehest) drunejensen@gmail.com
